@@ -128,6 +128,9 @@
 		<File
 			RelativePath=".\mod_neko.h">
 		</File>
+		<File
+			RelativePath="..\..\vm\stats.c">
+		</File>
 	</Files>
 	<Globals>
 	</Globals>
